@@ -1,5 +1,5 @@
 Package: bumphunter
-Version: 1.1.13
+Version: 1.1.14
 Title: Bump Hunter
 Description: Tools for finding bumps in genomic data
 Author: Rafael A. Irizarry, Martin Aryee, Hector Corrada Bravo, Kasper D. Hansen, Harris A. Jaffee
